syntax = "proto3";

message Cashflow {
    double interest_amount = 1;
    double principal_amount = 2;
    int64 date = 3;
}

message AccountWithCashflows {
    string flow_id = 1;
    string grp_id = 2;
    string llg_id = 3;
    double amount = 4;
    string ccy_id = 5;
    double intr_rate = 6;
    string reprice_freq = 7;
    int64 reprice_dt = 8;
    int64 mat_dt = 9;
    string acc_num = 10;
    int64 strt_dt = 11;
    string intr_cal_freq = 12;
    string is_float_rate = 13;
    string float_rate_bm = 14;
    string bu_id = 15;
    string cust_id = 16;
    string cust_name = 17;
    double sprd = 18;
    string schm_code = 19;
    double min_ir = 20;
    double max_ir = 21;
    double dep_amount = 22;
    double mat_amt = 23;
    double exch_rate = 24;
    string cust_ctry_code = 25;
    string cust_crdt_rtng = 26;
    string cust_sect_code = 27;
    string cust_indt_code = 28;
    string custom1 = 29;
    string custom2 = 30;
    double total_principal_amount = 31;
    double total_interest_amount = 32;
    int64 p1_int_1 = 33;
    int64 p2_int_2 = 34;
    int64 p3_int_3 = 35;
    int64 p4_int_4 = 36;
    int64 p5_int_5 = 37;
    double p6_flt_1 = 38;
    double p7_flt_2 = 39;
    double p8_flt_3 = 40;
    double p9_flt_4 = 41;
    double p10_flt_5 = 42;
    string p11_str_1 = 43;
    string p12_str_2 = 44;
    string p13_str_3 = 45;
    string p14_str_4 = 46;
    string p15_str_5 = 47;
    repeated Cashflow cashflows = 48;
}
